# home-finance-manager

./: .env.dist  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
.docker/: Dockerfile  docker-compose.yaml  docker-compose.yml
.github/workflows/: docker-cd.yml  hag-ci.yml
docs/: microservices-architecture.md
hfm-budget-analysis-service/: pyproject.toml
hfm-budget-analysis-service/docker/: Dockerfile
hfm-transaction-management-service/: pyproject.toml
hfm-transaction-management-service/src/: main.py
hfm-user-notification-service/: pyproject.toml
hfm-user-notification-service/src/: main.py
services/api-gateway/: .env.example  docker-compose.yml  pyproject.toml
services/api-gateway/docker/: Dockerfile
services/budget-analysis/: docker-compose.yml
services/budget-analysis/docker/: Dockerfile
services/budget-analysis/src/: main.py
services/transaction-management/docker/: Dockerfile
services/user-account-management/: pyproject.toml
services/user-account-management/docker/: Dockerfile
services/user-account-management/src/: main.py
services/user-notification/docker/: Dockerfile
src/: main.py
src/.github/workflows/: hag-ci.yml
src/accounts_management/: apps.py  urls.py  views.py
src/budget_analysis/: apps.py  urls.py  views.py
src/core/: env.py  settings.py  urls.py
src/core/settings/: settings.py
src/users_notifications/: apps.py  views.py
