[tool.poetry]
name = "hfm-api-gateway"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.1"
requests = "^2.32.3"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.4.7"
safety = "^3.2.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
