[tool.poetry]
name = "hfm-api-gateway"
version = "0.1.0"
description = ""
authors = ["stanislaw <stanislaw.kochanski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
authlib = "^1.4.0"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
python-jose = "^3.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"


[tool.poetry.group.ci.dependencies]
ruff = "^0.4.7"
safety = "^3.2.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
