[tool.poetry]
name = "hfm-user-notification-service"
version = "0.1.0"
description = "User Notification Service for Home Finance Manager"
authors = ["stanislaw <stanislaw.kochanski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.1"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlalchemy = "^2.0.37"
uvicorn = "^0.34.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.0"
celery = "^5.3.0"
smtplib-ssl = "^1.0.0"
pydantic = "^2.0.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.23.0"

[tool.poetry.group.ci.dependencies]
ruff = "^0.4.7"
safety = "^3.2.0"
bandit = "^1.7.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"